--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "scripts": {
     "dev": "rsbuild dev --open",
     "build": "rsbuild build",
+    "build:webpack": "rsbuild build --config ./rsbuild.config.webpack.mjs",
+    "build:vite": "vite build",
     "preview": "rsbuild preview"
   },
   "packageManager": "pnpm@8.14.1",
@@ -14,7 +16,9 @@
   },
   "devDependencies": {
     "@rsbuild/core": "^0.3.2",
+    "@rsbuild/plugin-swc": "^0.3.2",
     "@rsbuild/plugin-vue": "^0.3.2",
+    "@rsbuild/webpack": "^0.3.2",
     "@vitejs/plugin-vue": "^5.0.3",
     "vite": "^5.0.11"
   }
